<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dev.ngai.fantastic.business.login.fragment.LoginFragment">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/btn_login_sel"
                android:text="@string/action_sign_in"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/forgetPswBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:clickable="true"
                android:gravity="right|bottom"
                android:text="忘 记 密 码 ? "
                android:textColor="@color/colorPrimary" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:clickable="true"
                android:gravity="right|center_vertical"
                android:onClick="registeredBtn"
                android:text="点 击 注 册 ? "
                android:textColor="@color/colorPrimary" />

            <TextView
                android:text="温馨提示:忘记密码功能会通过邮箱发送一条重置密码安全链接,请登录邮箱并重置后,再次登录Fantastic"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_margin="32dp"
                android:gravity="center"
                android:textColor="@color/colorDefaultText"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
